--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '1.0.1'
 
 services:
   mysql:
@@ -24,10 +23,10 @@ services:
     depends_on:
       - mysql
     environment:
-      DB_HOST:mysql
-      DB_NAME:myuser
-      DB_NAME:mydatabase
-      DB_PASSWORD:mypassword
+     DB_HOST: mysql
+     DB_USER: myuser
+     DB_NAME: mydatabase
+     DB_PASSWORD: mypassword
     volumes:
       - ./backend:/app
     networks:
@@ -44,7 +43,7 @@ services:
       - backend
     networks:
       - app-network
-      
+
 volumes:
   mysql-data:
 
