--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mysql2": "^3.10.3",
-    "nodemon": "^3.1.4"
-  }
+    "express": "^4.21.2",
+    "mysql2": "^3.14.0",
+    "nodemon": "^3.1.9"
+  },
+  "description": ""
 }
