--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
     restart: always
     ports:
       - "5000:5000"
-    # depends_on:
-    #   - mysql
+    depends_on:
+      - mysql
     environment:
-     DB_HOST: mysql
+     DB_HOST: mysql-db
      DB_USER: myuser
      DB_NAME: mydatabase
      DB_PASSWORD: mypassword
